--- a/android/src/main/res/values/arrays.xml
+++ b/android/src/main/res/values/arrays.xml
@@ -193,6 +193,10 @@
         <item>@style/ConnexonHighlightPresetStyleUnderground</item>
     </array>
 
+    <array name="bigham_callout_presets">
+        <item>@style/BighamCalloutPresetStyle1</item>
+    </array>
+
     <string-array name="bau_standard_colors">
         <item>#fb7d9c</item>
         <item>#fb6b17</item>
